# ReceiptAnalysis

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: notes.txt
outputs/: 1_output_preprocessing.txt  2_output_clustering.txt  3_output_associative_rules.txt
rules/: category_cluster_0_info.json  category_cluster_1_info.json  category_cluster_2_info.json  category_cluster_2_rules_0.json  category_cluster_2_rules_1.json  category_cluster_2_ruleset_0.json  category_cluster_2_ruleset_1.json  category_cluster_3_info.json  category_cluster_4_info.json  category_cluster_4_rules_0.json  category_cluster_4_rules_1.json  category_cluster_4_rules_2.json  category_cluster_4_rules_3.json  category_cluster_4_rules_4.json  category_cluster_4_rules_5.json  category_cluster_4_rules_6.json  category_cluster_4_rules_7.json  category_cluster_4_ruleset_0.json  category_cluster_4_ruleset_1.json  category_cluster_4_ruleset_2.json  category_cluster_4_ruleset_3.json  category_cluster_4_ruleset_4.json  category_cluster_4_ruleset_5.json  category_cluster_4_ruleset_6.json  category_cluster_4_ruleset_7.json  category_cluster_5_info.json  category_cluster_5_rules_0.json  category_cluster_5_rules_1.json  category_cluster_5_rules_10.json  category_cluster_5_rules_11.json  category_cluster_5_rules_12.json  category_cluster_5_rules_13.json  category_cluster_5_rules_2.json  category_cluster_5_rules_3.json  category_cluster_5_rules_4.json  category_cluster_5_rules_5.json  category_cluster_5_rules_6.json  category_cluster_5_rules_7.json  category_cluster_5_rules_8.json  (+58 more)
src/: 1_preprocessing.py  (+2 more)
